loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:6: error: '(' expected but identifier found.
          if estSurBiscuit() {
             ^Poucet1:7: error: illegal start of simple expression
            biscuit+=1;};};
                        ^